# phenoct

./: README.md  examples.py  phenoct.py  pyproject.toml  tests.ipynb
src/: phenoct.py
