[project]
name = "phenoct"
version = "1.3.0"
description = "A packge with utilities for analysing data from the PhenoCT system at The Plant Accelerator."
authors = [
    {name = "George Sainsbury",email = "gsainsbury86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.9.4,<4.0.0)",
    "scipy (>=1.13.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyvista (>=0.44.2,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
