[project]
name = "phenoct"
version = "1.3.2"
description = "A packge with utilities for analysing data from the PhenoCT system at The Plant Accelerator."
authors = [
    {name = "George Sainsbury",email = "gsainsbury86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "matplotlib",
    "scipy",
    "tqdm",
    "requests",
    "pyvista"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
