[project]
name = "phenoct"
version = "1.4.0"
description = "A packge with utilities for analysing data from the PhenoCT system at The Plant Accelerator."
authors = [
    { name = "George Sainsbury", email = "gsainsbury86@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyvista==0.48.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "tifffile>=2026.1.28",
    "tqdm>=4.67.3"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
